versions/v2.8/modules/en/pages/installation-and-upgrade/other-installation-methods/air-gapped/publish-images.adoc
= 2. Collect and Publish Images to your Private Registry
:revdate: 2024-09-27
:page-revdate: {revdate}

This section describes how to set up your private registry so that when you install Rancher, Rancher will pull all the required images from this registry.

By default, all images used to xref:cluster-deployment/cluster-deployment.adoc[provision Kubernetes clusters] or launch any tools in Rancher, e.g. monitoring, pipelines, alerts, are pulled from Docker Hub. In an air gapped installation of Rancher, you will need a private registry that is located somewhere accessible by your Rancher server. Then, you will load the registry with all the images.

Populating the private registry with images is the same process for installing Rancher with Docker and for installing Rancher on a Kubernetes cluster.

The steps in this section differ depending on whether or not you are planning to use Rancher to provision a downstream cluster with Windows nodes or not. By default, we provide the steps of how to populate your private registry assuming that Rancher will provision downstream Kubernetes clusters with only Linux nodes. But if you plan on provisioning any xref:cluster-deployment/custom-clusters/windows/use-windows-clusters.adoc[downstream Kubernetes clusters using Windows nodes], there are separate instructions to support the images needed.

[NOTE]
.Prerequisites:
====

You must have a https://docs.docker.com/registry/deploying/#run-an-externally-accessible-registry[private registry] available to use.

If the registry has certs, follow https://rancher.com/docs/k3s/latest/en/installation/private-registry/[this K3s documentation] about adding a private registry. The certs and registry configuration files need to be mounted into the Rancher container.
====


[tabs]
======
Linux Only Clusters::
+
--
For Rancher servers that will only provision Linux clusters, these are the steps to populate your private registry.

. <<_linux_1_find_the_required_assets_for_your_rancher_version,Find the required assets for your Rancher version>>
. <<_linux_2_collect_the_cert_manager_image,Collect the cert-manager image>> (unless you are bringing your own certificates or terminating TLS on a load balancer)
. <<_linux_3_save_the_images_to_your_workstation,Save the images to your workstation>>
. <<_linux_4_populate_the_private_registry,Populate the private registry>>

[#_prerequisites]
[pass]
<h2><a class="anchor" id="_prerequisites" href="#_prerequisites"></a>Prerequisites</h2>

These steps expect you to use a Linux workstation that has internet access, access to your private registry, and at least 20 GB of disk space.

If you will use ARM64 hosts, the registry must support manifests. As of April 2020, Amazon Elastic Container Registry does not support manifests.

[#_linux_1_find_the_required_assets_for_your_rancher_version]
[pass]
<h2><a class="anchor" id="_linux_1_find_the_required_assets_for_your_rancher_version" href="#_linux_1_find_the_required_assets_for_your_rancher_version"></a>1. Find the required assets for your Rancher version</h2>

. Go to our https://github.com/rancher/rancher/releases[releases page,] find the Rancher v2.x.x release that you want to install, and click *Assets*. Note: Don't use releases marked `rc` or `Pre-release`, as they are not stable for production environments.
. From the release's *Assets* section, download the following files, which are required to install Rancher in an air gap environment:

|===
| Release File | Description

| `rancher-images.txt`
| This file contains a list of images needed to install Rancher, provision clusters and user Rancher tools.

| `rancher-save-images.sh`
| This script pulls all the images in the `rancher-images.txt` from Docker Hub and saves all of the images as `rancher-images.tar.gz`.

| `rancher-load-images.sh`
| This script loads images from the `rancher-images.tar.gz` file and pushes them to your private registry.
|===

[#_linux_2_collect_the_cert_manager_image]
[pass]
<h2><a class="anchor" id="_linux_2_collect_the_cert_manager_image" href="#_linux_2_collect_the_cert_manager_image"></a>2. Collect the cert-manager image</h2>

[NOTE]
====

Skip this step if you are using your own certificates, or if you are terminating TLS on an external load balancer.
====


In a Kubernetes Install, if you elect to use the Rancher default self-signed TLS certificates, you must add the https://artifacthub.io/packages/helm/cert-manager/cert-manager[`cert-manager`] image to `rancher-images.txt` as well.

. Fetch the latest `cert-manager` Helm chart and parse the template for image details:
+

[NOTE]
====
Recent changes to cert-manager require an upgrade. If you are upgrading Rancher and using a version of cert-manager older than v0.12.0, please see our xref:installation-and-upgrade/resources/upgrade-cert-manager.adoc[upgrade documentation].
====

+
[,plain]
----
helm repo add jetstack https://charts.jetstack.io
helm repo update
helm fetch jetstack/cert-manager
helm template ./cert-manager-<version>.tgz | awk '$1 ~ /image:/ {print $2}' | sed s/\"//g >> ./rancher-images.txt
----

. Sort and unique the images list to remove any overlap between the sources:
+
[,plain]
----
sort -u rancher-images.txt -o rancher-images.txt
----

[#_linux_3_save_the_images_to_your_workstation]
[pass]
<h2><a class="anchor" id="_linux_3_save_the_images_to_your_workstation" href="#_linux_3_save_the_images_to_your_workstation"></a>3. Save the images to your workstation</h2>

. Make `rancher-save-images.sh` an executable:
+
----
chmod +x rancher-save-images.sh
----

. Run `rancher-save-images.sh` with the `rancher-images.txt` image list to create a tarball of all the required images:
+
[,plain]
----
./rancher-save-images.sh --image-list ./rancher-images.txt
----
+
*Result:* Docker begins pulling the images used for an air gap install. Be patient. This process takes a few minutes. When the process completes, your current directory will output a tarball named `rancher-images.tar.gz`. Check that the output is in the directory.

[#_linux_4_populate_the_private_registry]
[pass]
<h2><a class="anchor" id="_linux_4_populate_the_private_registry" href="#_linux_4_populate_the_private_registry"></a>4. Populate the private registry</h2>

Next, you will move the images in the `rancher-images.tar.gz` to your private registry using the scripts to load the images.

Move the images in the `rancher-images.tar.gz` to your private registry using the scripts to load the images.

The `rancher-images.txt` is expected to be on the workstation in the same directory that you are running the `rancher-load-images.sh` script. The `rancher-images.tar.gz` should also be in the same directory.

. Log into your private registry if required:
+
[,plain]
----
   docker login <REGISTRY.YOURDOMAIN.COM:PORT>
----

. Make `rancher-load-images.sh` an executable:
+
----
   chmod +x rancher-load-images.sh
----

. Use `rancher-load-images.sh` to extract, tag and push `rancher-images.txt` and `rancher-images.tar.gz` to your private registry:
+
[,plain]
----
./rancher-load-images.sh --image-list ./rancher-images.txt --registry <REGISTRY.YOURDOMAIN.COM:PORT>
----
--

Linux and Windows Clusters::
+
--
For Rancher servers that will provision Linux and Windows clusters, there are distinctive steps to populate your private registry for the Windows images and the Linux images. Since a Windows cluster is a mix of Linux and Windows nodes, the Linux images pushed into the private registry are manifests.

[#_windows_steps]
[pass]
<h2><a class="anchor" id="_windows_steps" href="#_windows_steps"></a>Windows Steps</h2>

The Windows images need to be collected and pushed from a Windows server workstation.

. <<_win_1_find_the_required_assets_for_your_rancher_version,Find the required assets for your Rancher version>>
. <<_2_save_the_images_to_your_windows_server_workstation,Save the images to your Windows Server workstation>>
. <<_3_prepare_the_docker_daemon,Prepare the Docker daemon>>
. <<_win_4_populate_the_private_registry,Populate the private registry>>

[#_win_prerequisites]
[pass]
<h3><a class="anchor" id="_win_prerequisites" href="#_win_prerequisites"></a>Prerequisites</h3>

These steps expect you to use a Windows Server 1809 workstation that has internet access, access to your private registry, and at least 50 GB of disk space.

The workstation must have Docker 18.02+ in order to support manifests, which are required when provisioning Windows clusters.

Your registry must support manifests. As of April 2020, Amazon Elastic Container Registry does not support manifests.

[#_win_1_find_the_required_assets_for_your_rancher_version]
[pass]
<h3><a class="anchor" id="_win_1_find_the_required_assets_for_your_rancher_version" href="#_win_1_find_the_required_assets_for_your_rancher_version"></a>1. Find the required assets for your Rancher version</h3>

. Browse to our https://github.com/rancher/rancher/releases[releases page] and find the Rancher v2.x.x release that you want to install. Don't download releases marked `rc` or `Pre-release`, as they are not stable for production environments.
. From the release's "Assets" section, download the following files:

|===
| Release File | Description

| `rancher-windows-images.txt`
| This file contains a list of Windows images needed to provision Windows clusters.

| `rancher-save-images.ps1`
| This script pulls all the images in the `rancher-windows-images.txt` from Docker Hub and saves all of the images as `rancher-windows-images.tar.gz`.

| `rancher-load-images.ps1`
| This script loads the images from the `rancher-windows-images.tar.gz` file and pushes them to your private registry.
|===

[#_2_save_the_images_to_your_windows_server_workstation]
[pass]
<h3><a class="anchor" id="_2_save_the_images_to_your_windows_server_workstation" href="#_2_save_the_images_to_your_windows_server_workstation"></a>2. Save the images to your Windows Server workstation</h3>

. Using `powershell`, go to the directory that has the files that were downloaded in the previous step.
. Run `rancher-save-images.ps1` to create a tarball of all the required images:
+
[,plain]
----
./rancher-save-images.ps1
----
+
*Result:* Docker begins pulling the images used for an air gap install. Be patient. This process takes a few minutes. When the process completes, your current directory will output a tarball named `rancher-windows-images.tar.gz`. Check that the output is in the directory.

[#_3_prepare_the_docker_daemon]
[pass]
<h3><a class="anchor" id="_3_prepare_the_docker_daemon" href="#_3_prepare_the_docker_daemon"></a>3. Prepare the Docker daemon</h3>

Append your private registry address to the `allow-nondistributable-artifacts` config field in the Docker daemon (`C:\ProgramData\Docker\config\daemon.json`). Since the base image of Windows images are maintained by the `mcr.microsoft.com` registry, this step is required as the layers in the Microsoft registry are missing from Docker Hub and need to be pulled into the private registry.

[,json]
----
   {
     ...
     "allow-nondistributable-artifacts": [
       ...
       "<REGISTRY.YOURDOMAIN.COM:PORT>"
     ]
     ...
   }
----

[#_win_4_populate_the_private_registry]
[pass]
<h3><a class="anchor" id="_win_4_populate_the_private_registry" href="#_win_4_populate_the_private_registry"></a>4. Populate the private registry</h3>

Move the images in the `rancher-windows-images.tar.gz` to your private registry using the scripts to load the images.

The `rancher-windows-images.txt` is expected to be on the workstation in the same directory that you are running the `rancher-load-images.ps1` script. The `rancher-windows-images.tar.gz` should also be in the same directory.

. Using `powershell`, log into your private registry if required:
+
[,plain]
----
docker login <REGISTRY.YOURDOMAIN.COM:PORT>
----

. Using `powershell`, use `rancher-load-images.ps1` to extract, tag and push the images from `rancher-images.tar.gz` to your private registry:
+
[,plain]
----
./rancher-load-images.ps1 --registry <REGISTRY.YOURDOMAIN.COM:PORT>
----

[#_linux_steps]
[pass]
<h2><a class="anchor" id="_linux_steps" href="#_linux_steps"></a>Linux Steps</h2>

The Linux images need to be collected and pushed from a Linux host, but _must be done after_ populating the Windows images into the private registry. These step are different from the Linux only steps as the Linux images that are pushed will actually manifests that support Windows and Linux images.

. <<_winlin_1_find_the_required_assets_for_your_rancher_version,Find the required assets for your Rancher version>>
. <<_winlin_2_collect_all_the_required_images,Collect all the required images>>
. <<_winlin_3_save_the_images_to_your_workstation,Save the images to your Linux workstation>>
. <<_winlin_4_populate_the_private_registry,Populate the private registry>>

[#_winlin_prerequisites]
[pass]
<h3><a class="anchor" id="_winlin_prerequisites" href="#_winlin_prerequisites"></a>Prerequisites</h3>

You must populate the private registry with the Windows images before populating the private registry with Linux images. If you have already populated the registry with Linux images, you will need to follow these instructions again as they will publish manifests that support Windows and Linux images.

These steps expect you to use a Linux workstation that has internet access, access to your private registry, and at least 20 GB of disk space.

The workstation must have Docker 18.02+ in order to support manifests, which are required when provisioning Windows clusters.

[#_winlin_1_find_the_required_assets_for_your_rancher_version]
[pass]
<h3><a class="anchor" id="_winlin_1_find_the_required_assets_for_your_rancher_version" href="#_winlin_1_find_the_required_assets_for_your_rancher_version"></a>1. Find the required assets for your Rancher version</h3>

. Browse to our https://github.com/rancher/rancher/releases[releases page] and find the Rancher v2.x.x release that you want to install. Don't download releases marked `rc` or `Pre-release`, as they are not stable for production environments. Click *Assets*.
. From the release's *Assets* section, download the following files:

|===
| Release File | Description

| `rancher-images.txt`
| This file contains a list of images needed to install Rancher, provision clusters and user Rancher tools.

| `rancher-windows-images.txt`
| This file contains a list of images needed to provision Windows clusters.

| `rancher-save-images.sh`
| This script pulls all the images in the `rancher-images.txt` from Docker Hub and saves all of the images as `rancher-images.tar.gz`.

| `rancher-load-images.sh`
| This script loads images from the `rancher-images.tar.gz` file and pushes them to your private registry.
|===

[#_winlin_2_collect_all_the_required_images]
[pass]
<h3><a class="anchor" id="_winlin_2_collect_all_the_required_images" href="#_winlin_2_collect_all_the_required_images"></a>2. Collect all the required images</h3>

*For Kubernetes Installs using Rancher Generated Self-Signed Certificate:* In a Kubernetes Install, if you elect to use the Rancher default self-signed TLS certificates, you must add the https://artifacthub.io/packages/helm/cert-manager/cert-manager[`cert-manager`] image to `rancher-images.txt` as well. You skip this step if you are using you using your own certificates.

. Fetch the latest `cert-manager` Helm chart and parse the template for image details:
+

[NOTE]
====
Recent changes to cert-manager require an upgrade. If you are upgrading Rancher and using a version of cert-manager older than v0.12.0, please see our xref:installation-and-upgrade/resources/upgrade-cert-manager.adoc[upgrade documentation].
====

+
[,plain]
----
helm repo add jetstack https://charts.jetstack.io
helm repo update
helm fetch jetstack/cert-manager
helm template ./cert-manager-<version>.tgz | awk '$1 ~ /image:/ {print $2}' | sed s/\"//g >> ./rancher-images.txt
----

. Sort and unique the images list to remove any overlap between the sources:
+
[,plain]
----
sort -u rancher-images.txt -o rancher-images.txt
----

[#_winlin_3_save_the_images_to_your_workstation]
[pass]
<h3><a class="anchor" id="_winlin_3_save_the_images_to_your_workstation" href="#_winlin_3_save_the_images_to_your_workstation"></a>3. Save the images to your workstation</h3>

. Make `rancher-save-images.sh` an executable:
+
----
chmod +x rancher-save-images.sh
----

. Run `rancher-save-images.sh` with the `rancher-images.txt` image list to create a tarball of all the required images:
+
[,plain]
----
./rancher-save-images.sh --image-list ./rancher-images.txt
----

*Result:* Docker begins pulling the images used for an air gap install. Be patient. This process takes a few minutes. When the process completes, your current directory will output a tarball named `rancher-images.tar.gz`. Check that the output is in the directory.

[#_winlin_4_populate_the_private_registry]
[pass]
<h3><a class="anchor" id="_winlin_4_populate_the_private_registry" href="#_winlin_4_populate_the_private_registry"></a>4. Populate the private registry</h3>

Move the images in the `rancher-images.tar.gz` to your private registry using the `rancher-load-images.sh script` to load the images.

The image list, `rancher-images.txt` or `rancher-windows-images.txt`, is expected to be on the workstation in the same directory that you are running the `rancher-load-images.sh` script. The `rancher-images.tar.gz` should also be in the same directory.

. Log into your private registry if required:
+
[,plain]
----
docker login <REGISTRY.YOURDOMAIN.COM:PORT>
----

. Make `rancher-load-images.sh` an executable:
+
----
chmod +x rancher-load-images.sh
----

. Use `rancher-load-images.sh` to extract, tag and push the images from `rancher-images.tar.gz` to your private registry:
+
[,plain]
----
./rancher-load-images.sh --image-list ./rancher-images.txt \
   --windows-image-list ./rancher-windows-images.txt \
   --registry <REGISTRY.YOURDOMAIN.COM:PORT>
----
--
====== 

== xref:installation-and-upgrade/other-installation-methods/air-gapped/install-kubernetes.adoc[Next step for Kubernetes Installs - Launch a Kubernetes Cluster]
